# MRM_Saisarath

./: Task_1.md  Task_3.md  Task_4_5.md
ML_NeuralNetworks/Mnist/: minstModel.ipynb
ROS_tasks/: ROS_tasks.md
ROS_tasks/GlobalPlannerTask/custom_messsages_interface/: CMakeLists.txt  package.xml
ROS_tasks/GlobalPlannerTask/custom_messsages_interface/msg/: Vec.msg  Yaw.msg
ROS_tasks/GlobalPlannerTask/robot_wheel/model/: robot.gazebo
ROS_tasks/GlobalPlannerTask/robot_wheel/src/: 3Vec.h  RovorMovemain.cpp  getDestination.cpp  imuMain.cpp  rovorMove.cpp  rovorMove.hpp
ROS_tasks/Nav2NavigationTask/robot_wheel/: CMakeLists.txt  package.xml
ROS_tasks/Nav2NavigationTask/robot_wheel/config/: configuration.rviz  nav2_parameters.yaml
ROS_tasks/Nav2NavigationTask/robot_wheel/launch/: gazeboModel.launch.py  nav2Launch.launch.py
ROS_tasks/Nav2NavigationTask/robot_wheel/model/: my_world.world  robot.gazebo  robot.xacro
ROS_tasks/Nav2NavigationTask/robot_wheel/src/: logMain.cpp  rovorMove.cpp
ROS_tasks/robot_wheel/launch/: gazeboModel.launch.py
ROS_tasks/robot_wheel/model/: robot.xacro
ROS_tasks/robot_wheel/src/: imuStuff.hpp
ROS_tasks/robot_wheel_PCL_OA/launch/: gazeboModel.launch.py
ROS_tasks/robot_wheel_PCL_OA/model/: robot.xacro
ROS_tasks/robot_wheel_PCL_OA/src/: rovorMove.cpp  rovorMove.hpp
ROS_tasks/robot_wheel_pclPreproccessing/: CMakeLists.txt  package.xml
ROS_tasks/robot_wheel_pclPreproccessing/launch/: gazeboModel.launch.py
ROS_tasks/robot_wheel_pclPreproccessing/src/: imuStuff.cpp  pcl_preprocessor.cpp  rovorMove.cpp  rovorMove.hpp
ROS_tasks/robot_wheel_rtab/: CMakeLists.txt  package.xml
ROS_tasks/robot_wheel_rtab/launch/: gazeboModel.launch.py
ROS_tasks/robot_wheel_rtab/model/: robot.gazebo  robot.xacro
